samples/_failures_safe/1761002458_3c132a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_533b53d2.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_533b53d2.c:145:16: error: missing terminating " character
  145 |         printf("Token %zu: Type=%
      |                ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_533b53d2.c:145:9: error: expected expression at end of input
  145 |         printf("Token %zu: Type=%
      |         ^~~~~~
./samples/SAFE/__tmp_533b53d2.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_533b53d2.c:145:9: error: expected declaration or statement at end of input
